--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fs": "0.0.2",
-    "minimist": "^1.2.0",
-    "readline": "^1.3.0"
+    "minimist": "^1.2.0"
   }
 }
